--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="about">
             <p class="am" >About Me</p>
-            <img class="avt" src="https://scontent.fdad1-3.fna.fbcdn.net/v/t1.6435-9/206496079_3011760085810830_2605720813729727366_n.jpg?_nc_cat=104&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=jqflbxfINK4AX-YfOWD&tn=L_1ybILnpivaLjfr&_nc_ht=scontent.fdad1-3.fna&oh=9dadb48a4fe6c6484805398d2986648a&oe=6160F1E2"" />
+            <img class="avt" src="https://www.facebook.com/photo/?fbid=3176478639338973&set=a.1437381693248685" />
             <p class="ai" >NOTHING IS IMPOSSIBLE</p>
             <p class="ai2" >Muốn ngồi ở vị trí không ai ngồi được thì phải chịu
                     được những thứ không ai chịu được</p>
@@ -102,7 +102,7 @@
         <div id="contact">
             <p class="ct">Contact</p>
             <div class="iin4">
-                <p class="iv">Facebook: <a href="https://www.facebook.com/KhanhNhat.242">Nguyễn Nhật Khanh</a></p>
+                <p class="iv">Facebook: <a href="https://www.facebook.com/clory.242">Nguyễn Nhật Khanh</a></p>
                 <p class="iv">Instagram: <a href="https://www.instagram.com/clory.7399/">clory.7399</a></p>
                 <p class="iv">Zalo: 0916420671</p>
                 <p class="iv">Email: khanhnhat24022002@gmail.com</p>
